# napari-follicle-labeler

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
examples/: follicle_labeler.py  follicle_viewer.py
src/napari_follicle_labeler/: __init__.py  napari.yaml
src/napari_follicle_labeler/_tests/: test_reader.py  test_widget.py
