[metadata]
name = napari_follicle_labeler
description = a simple labeling utility for ovarian follicles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kevinyamauchi/napari-follicle-labeler
author = Kevin Yamauchi
author_email = kevin.yamauchi@gmail.com
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/kevinyamauchi/napari-follicle-labeler/issues
    Documentation = https://github.com/kevinyamauchi/napari-follicle-labeler#README.md
    Source Code = https://github.com/kevinyamauchi/napari-follicle-labeler
    User Support = https://github.com/kevinyamauchi/napari-follicle-labeler/issues

[options]
packages = find:
install_requires =
    h5py
    magicgui
    numpy
    pandas
    qtpy
python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires =
    setuptools-scm

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-follicle-labeler = napari_follicle_labeler:napari.yaml

[options.extras_require]
testing =
    napari
    pyqt5
    pytest
    pytest-cov
    pytest-qt
    tox

[options.package_data]
* = *.yaml
